--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.10",
+    "autoprefixer": "^10.4.17",
+    "gsap": "^3.12.5",
     "next": "14.1.0",
+    "postcss": "^8.4.35",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.4.1"
   }
 }
